<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bgr_color"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgr_color"
        tools:context=".movies_detail.MoviesDetailScreen">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="60dp"
            android:elevation="100dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/detailMovieTitleTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/favoriteStarImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@android:drawable/star_off" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detailMovieTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/basemovietitle"
            android:textColor="@color/splash_text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/detailMovieOverViewTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/detailMovieOverViewTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="30dp"

            android:text="@string/after_a_horrible_car_accident_brilliant_neurosurgeon_stephen_strange_must_find_a_way_and_a_cure_to_healing_his_hands_his_quest_brings_him_to_kamar_taj_in_nepal_where_he_studies_under_the_ancient_one_who_teaches_him_the_ways_of_magic_and_alternate_realities"
            android:textColor="@color/splash_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/detailMovieRatingTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailMovieTitleTxt" />

        <TextView
            android:id="@+id/detailMovieRatingTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"

            android:layout_marginEnd="30dp"
            android:text="rating: 4.2"
            android:textColor="@color/splash_text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/detailMovieReleaseDateTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailMovieOverViewTxt" />

        <TextView
            android:id="@+id/detailMovieReleaseDateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/release_date_14_07_2002"
            android:textColor="@color/splash_text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailMovieRatingTxt"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/backArrowIv"
            android:layout_width="24dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
